--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <option value="Documentation">Documentation</option>
                             <option value="Graphics">Graphics</option>
                             <option value="Marketing">Marketing</option>
-                            <option value="HR"></option>
+                            <option value="HR">HR</option>
                           </select>
                     </td>
                     <td class="w-25">
